Bug 415201 ? Firefox shutdowns very slow and with 100% CPU (r=marco, r=mano)